# acord-data-quality-monitor

./: .gitignore  DEMO.md  LICENSE  QUICK_DEMO.md  README.md  SETUP-GUIDE.md  VALIDATION_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  contract-validation.yml  regeneration-test.yml
contracts/: README.md  ai_agent_configs.yml  dim_submission.yml  fact_quality_check.yml  streaming_pipeline.yml  submission_quality_rules.yml
data/sample_acord/: anomalous_submission_001.xml  anomalous_submission_002.xml  complete_submission_001.xml  complete_submission_002.xml  incomplete_submission_001.xml  incomplete_submission_002.xml
data/seeds/: naics_codes.csv  state_codes.csv
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/staging/: schema.yml  stg_submissions.sql
dbt_project/models/warehouse/: dim_submission.sql  fact_quality_check.sql  schema.yml
docs/: AI_AGENTS.md  ARCHITECTURE.md  CONTRACTS.md  IMPLEMENTATION_PLAN.md  ISSUE_SUMMARY.md  METRICS.md  REPO_INITIALIZATION.md
examples/: ai_agents_usage.py  usage_examples.py
models/anomaly_detection/: isolation_forest.joblib  scaler.joblib
scripts/: generate_sample_data.py  train_anomaly_model.py  validate_contracts.py
src/: __init__.py
src/agents/: __init__.py  anomaly_agent.py  enrichment_agent.py  mock_apis.py  quality_agent.py
src/dashboard/: __init__.py  realtime_monitor.py
src/database/: __init__.py  duckdb_writer.py
src/models/: __init__.py  submission.py
src/orchestrator/: __init__.py  batch_processor.py
src/parsers/: __init__.py  acord_parser.py
src/streaming/: __init__.py  submission_stream_processor.py
src/utils/: contract_loader.py
src/validators/: __init__.py  quality_validator.py
tests/: __init__.py  conftest.py  test_ai_agents.py  test_contract_compliance.py  test_integration.py  test_parser.py  test_validators.py
tests/fixtures/: sample_acord_files.py
